[tool.poetry]
name = "pii-codex"
version = "0.0.6"
description = ""
authors = ["Eidan J. Rosado"]
license = "BSD 3-Clause"
readme = "README.MD"
homepage = "https://github.com/EdyVision/pii-codex"
repository = "https://github.com/EdyVision/pii-codex"
keywords = ["PII", "PII topology", "risk categories", "personal identifiable information"]
classifiers = ["Development Status :: 1 - Planning", "Intended Audience :: Science/Research", "License :: OSI Approved :: BSD License","Programming Language :: Python :: 3", ]
include = ["LICENSE", "LICENSE-ETHICS"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dataclasses-json = "^0.5.7"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
numpy = "^1.23.2"
pandas = "^1.4.4"

# Optional items for analyses - users have the option to use the integrated Presidio analyzer or
# avoid installing the following and bring their own detector, using the adapters
spacy = { version = "^3.4.1", optional = true }
presidio-analyzer = { version = "^2.2.29", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
pylint = "^2.15.0"
coverage = "^6.4.4"
assertpy = "^1.1"
Faker = "^14.2.1"
matplotlib = "^3.6.0"
ipykernel = "^6.16.0"
jupyter = "^1.0.0"
importlib-resources = "^5.9.0"
seaborn = "^0.12.0"
en_core_web_lg = {url="https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.4.0/en_core_web_lg-3.4.0.tar.gz#egg=en_core_web_lg"}

[tool.poetry.extras]
detections = [
    "spacy",
    "presidio-analyzer",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
