[tool.poetry]
name = "pii-codex"
version = "0.4.2"
description = ""
authors = ["Eidan J. Rosado"]
license = "BSD 3-Clause"
readme = "README.md"
homepage = "https://github.com/EdyVision/pii-codex"
repository = "https://github.com/EdyVision/pii-codex"
keywords = ["PII", "PII topology", "risk categories", "personal identifiable information"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3", ]
include = ["LICENSE", "LICENSE-ETHICS"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dataclasses-json = "^0.5.7"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pandas = "^1.4.4"
pillow = "^9.3.0"  # security dependency

# Optional items for analyses - users have the option to use the integrated Presidio analyzer or
# avoid installing the following and bring their own detector, using the adapters
spacy = { version = "^3.4.1", optional = true }
presidio-analyzer = { version = "^2.2.31", optional = true }
presidio-anonymizer = { version ="^2.2.31", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "22.12.0"
pylint = "^2.15.4"
mypy = "^0.982"
coverage = "^6.4.4"
assertpy = "^1.1"
Faker = "^14.2.1"
matplotlib = "^3.6.1"
ipykernel = "^6.16.0"
jupyter = "^1.0.0"
jupyter_core = "^4.11.2"
importlib-resources = "^5.9.0"
seaborn = "^0.12.0"
pre-commit = "^2.20.0"
en_core_web_lg = {url="https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.4.0/en_core_web_lg-3.4.0.tar.gz#egg=en_core_web_lg"}

[tool.poetry.extras]
detections = [
    "spacy",
    "presidio-analyzer",
    "presidio-anonymizer"
]

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
secondary = false

[[tool.poetry_bumpversion.replacements]]
files = ["CITATION.cff"]
search = 'version: {current_version}'
replace = 'version: {new_version}'

[[tool.poetry_bumpversion.replacements]]
files = [".zenodo.json"]
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests"
]

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
